<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <Button
                android:id="@+id/color"
                android:text="@string/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/chooseMenu"
        android:layout_below="@+id/theme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/FriendsWall"
            android:text="@string/other"
            android:textColor="@color/default_text"
            android:background="@drawable/pressed"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_width="170dp"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/PopularWall"
            android:text="@string/favoris"
            android:textColor="@color/default_text"
            android:background="@drawable/pressed"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/FriendsWall"/>

        </RelativeLayout>

    <ListView
        android:id="@+id/FavList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:smoothScrollbar="true"
        android:scrollingCache="false"
        android:animationCache="false"
        android:layout_below="@+id/chooseMenu"/>

    <ListView
        android:id="@+id/PhoneList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:smoothScrollbar="true"
        android:scrollingCache="false"
        android:animationCache="false"
        android:layout_below="@id/chooseMenu"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_add"/>

</RelativeLayout>
